--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,5 +5,5 @@ steps:
   args: ['push', 'gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA']
 - name: 'gcr.io/cloud-builders/kubectl'
   env: ['CLOUDSDK_COMPUTE_ZONE=${_COMPUTE_ZONE}', 'CLOUDSDK_CONTAINER_CLUSTER=${_CONTAINER_CLUSTER}']
-  args: ['set', 'image', 'deployment', 'honeypot-ui', 'honeypot-ui=gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA']
+  args: ['set', 'image', 'deployment', 'sprinthive-kyc-bureau', 'sprinthive-kyc-bureau=gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA']
 images: ['gcr.io/$PROJECT_ID/$REPO_NAME:$COMMIT_SHA']
