--- a/conf/kubernetes/deployment.yaml
+++ b/conf/kubernetes/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       containers:
       - image: gcr.io/jons-world/github-sprinthive-overlord-ui:1ac3210bb2a19292cd6cc68414b9a37834b386f0
         imagePullPolicy: IfNotPresent
-        name: sprinthive-kyc-bureau
+        name: sprinthive-kyc-bureau-v1
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
