--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
   "dependencies": {
     "amqplib": "^0.5.2",
     "axios": "^0.18.0",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "redux": "^3.7.2",
-    "redux-observable": "^1.0.0-alpha.1",
+    "dotenv": "^5.0.1",
     "rxjs": "^5.5.8"
   },
   "scripts": {
