--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "rxjs": "^5.5.8"
   },
   "scripts": {
-    "server": "nodemon src/server.js"
+    "server": "nodemon src/server.js",
+    "play": "nodemon src/play.js"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
